// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
Array [
  <button
    class="Buttonstyles__Box-qfvnbt-0 jolcIP"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Accent
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Primary
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Outline
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 gSxLZq"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Critical
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 lgPlfP"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Outline critical
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 envJPA"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Ghost
    </span>
  </button>,
]
`;

exports[`Button w/ any props 1`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 dcKhhz className"
  id="id"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Test
  </span>
</button>
`;

exports[`Button w/ disabled 1`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 cCBrNP"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ disabled 2`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 eCNSXu"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ disabled 3`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 cVvbVs"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ disabled 4`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 ciSgaY"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ disabled 5`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 exyFoj"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ disabled 6`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 dKyJxf"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ grid 1`] = `
Array [
  <button
    class="Buttonstyles__Box-qfvnbt-0 JIuCv"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      auto
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 lfonEn"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      1
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 hvRRmM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      2
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 gGBlcy"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      3
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 ejfeJt"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      4
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 iSUkJb"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      5
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 iWYTuY"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      6
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 rIZZw"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      7
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 jOzTey"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      8
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 fufRLH"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      9
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 dVwgPH"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      10
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 laTnoO"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      11
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 fGSFHc"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      12
    </span>
  </button>,
]
`;

exports[`Button w/ href 1`] = `
Array [
  <a
    class="Buttonstyles__Box-qfvnbt-0 jolcIP"
    href="/"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Home
    </span>
  </a>,
  <a
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    href="http://google.com"
    target="_blank"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Google
    </span>
  </a>,
]
`;

exports[`Button w/ icons 1`] = `
Array [
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
        />
      </svg>
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
       Назад
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Вперед 
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M2 11.02v2h16.485l-5.832 5.552 1.378 1.449 7.658-7.289a1 1 0 00.001-1.448L14.032 3.98l-1.38 1.448 5.864 5.594H2z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M5.494 11l5.853-5.571L9.97 3.98l-7.66 7.29a1 1 0 00-.001 1.448l7.658 7.304 1.38-1.447L5.505 13 22 13.001v-2H5.494z"
        />
      </svg>
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
       Вперед 
    </span>
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M2 11.02v2h16.485l-5.832 5.552 1.378 1.449 7.658-7.289a1 1 0 00.001-1.448L14.032 3.98l-1.38 1.448 5.864 5.594H2z"
        />
      </svg>
    </span>
  </button>,
]
`;

exports[`Button w/ loading 1`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 fgGfcJ"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
  <div
    class="Spinnerstyles__Box-moemrn-0 eAchHT"
  >
    <svg
      class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="Spinnerstyles__Circle-moemrn-2 gwfoLM"
        color="london120"
      />
    </svg>
  </div>
</button>
`;

exports[`Button w/ loading 2`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 cdaZGg"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
  <div
    class="Spinnerstyles__Box-moemrn-0 eAchHT"
  >
    <svg
      class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="Spinnerstyles__Circle-moemrn-2 gwfoLM"
        color="london120"
      />
    </svg>
  </div>
</button>
`;

exports[`Button w/ loading 3`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 kQYmnS"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
  <div
    class="Spinnerstyles__Box-moemrn-0 eAchHT"
  >
    <svg
      class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="Spinnerstyles__Circle-moemrn-2 gwfoLM"
        color="london120"
      />
    </svg>
  </div>
</button>
`;

exports[`Button w/ loading 4`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 eIxMXy"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
  <div
    class="Spinnerstyles__Box-moemrn-0 eAchHT"
  >
    <svg
      class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="Spinnerstyles__Circle-moemrn-2 gwfoLM"
        color="london120"
      />
    </svg>
  </div>
</button>
`;

exports[`Button w/ loading 5`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 XVgZZ"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
  <div
    class="Spinnerstyles__Box-moemrn-0 eAchHT"
  >
    <svg
      class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="Spinnerstyles__Circle-moemrn-2 gwfoLM"
        color="london120"
      />
    </svg>
  </div>
</button>
`;

exports[`Button w/ loading 6`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 dFJqQx"
  disabled=""
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
  <div
    class="Spinnerstyles__Box-moemrn-0 eAchHT"
  >
    <svg
      class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="Spinnerstyles__Circle-moemrn-2 gwfoLM"
        color="london120"
      />
    </svg>
  </div>
</button>
`;

exports[`Button w/ size 1`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 enpXpF"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 2`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 fFyFwm"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 3`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 jolcIP"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 4`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 lpvyfT"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 5`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 eKLxeZ"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 6`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 fUCIhN"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 7`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 hnlLZk"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 8`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 jSaWZD"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 9`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 gSxLZq"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 10`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 iTIhwu"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 11`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 bbWlLk"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 12`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 clNwNY"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 13`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 hbPOKe"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 14`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 ddRaMd"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 15`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 envJPA"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 16`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 ksFgTA"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 17`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 cZtRjy"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 18`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 eKMzHy"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 19`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 bDdFZO"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 20`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 gNBwRF"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 21`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 22`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 fyxJHA"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 23`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 cASmYu"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 24`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 bmQMLy"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 25`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 hczkOx"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 26`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 hHfLQa"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 27`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 lgPlfP"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 28`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 booDdX"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 29`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 iZnXrB"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 30`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 hLmxeF"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 31`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 gfnTjB"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 32`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 dkSKWW"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 33`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 34`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 fdUCED"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 35`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 kQnzHZ"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ size 36`] = `
<button
  class="Buttonstyles__Box-qfvnbt-0 KJblR"
  type="button"
>
  <span
    class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
  >
    Default
  </span>
</button>
`;

exports[`Button w/ square 1`] = `
Array [
  <button
    class="Buttonstyles__Box-qfvnbt-0 dxiCgh"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 gRlLrd"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M5.372 21.727L12 15.043l6.628 6.684 2.63-2.649-6.63-6.686 1.383-1.396V8.241l.961-.97v2.403l.836.844 3.36-3.39.832.837c-.006-.632-.131-2.462-1.67-3.987-1.661-1.611-3.454-.885-4.067-.266L12.903 7.1l.857.863L12 9.74l-1.761-1.777.857-.863-3.36-3.39c-.612-.618-2.406-1.344-4.066.267C2.13 5.503 2.006 7.333 2 7.965l.831-.838 3.36 3.39.837-.843V7.271l.96.97v2.755l1.383 1.396-6.629 6.686 2.63 2.65z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 jxwgnS"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M5.372 21.727L12 15.043l6.628 6.684 2.63-2.649-6.63-6.686 1.383-1.396V8.241l.961-.97v2.403l.836.844 3.36-3.39.832.837c-.006-.632-.131-2.462-1.67-3.987-1.661-1.611-3.454-.885-4.067-.266L12.903 7.1l.857.863L12 9.74l-1.761-1.777.857-.863-3.36-3.39c-.612-.618-2.406-1.344-4.066.267C2.13 5.503 2.006 7.333 2 7.965l.831-.838 3.36 3.39.837-.843V7.271l.96.97v2.755l1.383 1.396-6.629 6.686 2.63 2.65z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 hWFVnH"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M5.372 21.727L12 15.043l6.628 6.684 2.63-2.649-6.63-6.686 1.383-1.396V8.241l.961-.97v2.403l.836.844 3.36-3.39.832.837c-.006-.632-.131-2.462-1.67-3.987-1.661-1.611-3.454-.885-4.067-.266L12.903 7.1l.857.863L12 9.74l-1.761-1.777.857-.863-3.36-3.39c-.612-.618-2.406-1.344-4.066.267C2.13 5.503 2.006 7.333 2 7.965l.831-.838 3.36 3.39.837-.843V7.271l.96.97v2.755l1.383 1.396-6.629 6.686 2.63 2.65z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 etazHX"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M5.372 21.727L12 15.043l6.628 6.684 2.63-2.649-6.63-6.686 1.383-1.396V8.241l.961-.97v2.403l.836.844 3.36-3.39.832.837c-.006-.632-.131-2.462-1.67-3.987-1.661-1.611-3.454-.885-4.067-.266L12.903 7.1l.857.863L12 9.74l-1.761-1.777.857-.863-3.36-3.39c-.612-.618-2.406-1.344-4.066.267C2.13 5.503 2.006 7.333 2 7.965l.831-.838 3.36 3.39.837-.843V7.271l.96.97v2.755l1.383 1.396-6.629 6.686 2.63 2.65z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 fOQYmN"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M5.372 21.727L12 15.043l6.628 6.684 2.63-2.649-6.63-6.686 1.383-1.396V8.241l.961-.97v2.403l.836.844 3.36-3.39.832.837c-.006-.632-.131-2.462-1.67-3.987-1.661-1.611-3.454-.885-4.067-.266L12.903 7.1l.857.863L12 9.74l-1.761-1.777.857-.863-3.36-3.39c-.612-.618-2.406-1.344-4.066.267C2.13 5.503 2.006 7.333 2 7.965l.831-.838 3.36 3.39.837-.843V7.271l.96.97v2.755l1.383 1.396-6.629 6.686 2.63 2.65z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 eAQYNR"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 buKajC"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M5.372 21.727L12 15.043l6.628 6.684 2.63-2.649-6.63-6.686 1.383-1.396V8.241l.961-.97v2.403l.836.844 3.36-3.39.832.837c-.006-.632-.131-2.462-1.67-3.987-1.661-1.611-3.454-.885-4.067-.266L12.903 7.1l.857.863L12 9.74l-1.761-1.777.857-.863-3.36-3.39c-.612-.618-2.406-1.344-4.066.267C2.13 5.503 2.006 7.333 2 7.965l.831-.838 3.36 3.39.837-.843V7.271l.96.97v2.755l1.383 1.396-6.629 6.686 2.63 2.65z"
        />
      </svg>
    </span>
  </button>,
]
`;

exports[`Button w/ truncate 1`] = `
Array [
  <button
    class="Buttonstyles__Box-qfvnbt-0 cnwJQy"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Button Text
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 hvRRmM"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Super Button Text
    </span>
  </button>,
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcVPwO"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Super Button Text Awesome Amazing
    </span>
  </button>,
]
`;
